--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 
 }
+
 
 :root {
     --primary-color:#F5CF06;
@@ -28,9 +30,20 @@ header {
     height: 48px;
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 1%;
+    text-decoration: none;
+    color: var(--secundary-color);
+    font-size: 2rem;
+    font-family: 'Righteous', cursive;
+}
+
 main {
     background-color: brown;
     flex: 1;
+    font-family: 'Righteous', cursive;
 }
 
 footer {
