--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 
@@ -99,6 +98,12 @@ main {
     color: var(--terciary-color);
     font-size: 3rem;
 }
+
+.pikachu_img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
 
 footer {
     font-family: 'Righteous', cursive;
