--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ main {
     top: 50%;
     left: 50%;
     transform: translate( -50%, -50%);
+}
 
 footer {
     font-family: 'Righteous', cursive;
