--- a/style.css
+++ b/style.css
@@ -91,7 +91,12 @@ main {
     place-self: center end;
     height: 100px;
     width: 411px;
-    background-color: var(--secundary-color);
+     background-color: var(--secundary-color); 
+
+    /*border-color: rgb(230, 0, 18);
+    background-color: rgb(230, 0, 18);
+    border-radius: 10px;*/
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,4 +115,67 @@ footer {
     font-family: 'Righteous', cursive;
     text-align: center;
     color: var(--secundary-color);
+}
+
+/*TABLET*/
+
+@media (max-width: 960px) {
+
+    :root {
+        --space-default: 30px;
+    }
+
+    main {
+        grid-template-columns: 1fr;
+    }
+
+.title {
+    place-self: start center;
+}
+    
+    .description {
+        grid-column: 1;
+        grid-row: 2;
+        place-self: center;
+        text-align: center;
+    }
+
+    .action {
+        grid-row: 2;
+        grid-column: 1;
+        place-self: end center;
+    }
+
+    footer {
+        display: none;
+    }
+
+    .pikachu_img {
+        transform: translate(-50%, -60%);
+    }
+}
+
+@media (max-width: 640px) {
+
+    .title {
+        transform: translateY(30px);
+    }
+
+    .description__text {
+        display: none;
+    }
+
+    .pikachu_img {
+        width: 90vw;
+        transform: translate(-50%, -50%);
+    }
+
+    .action {
+        width: 100%;
+    }
+
+    .description__title {
+        font-size: 10vw;
+    }
+
 }
